RESOLVED FIXED253841
Ignore calc() values on colgroup elements
https://bugs.webkit.org/show_bug.cgi?id=253841
Summary Ignore calc() values on colgroup elements
Ahmad Saleem
Reported 2023-03-13 12:57:05 PDT
Hi Team, While going through Blink's commit, I came across following commit, which can be merged and in local testing on WebKit ToT, it fixes following test: Test Case - https://jsfiddle.net/a0r9q1p3/show ^ Fails in Safari Technology Preview 165. Passes in Chrome Canary 113 and Firefox Nightly 112. Commit - https://src.chromium.org/viewvc/blink?view=revision&revision=193912 WebKit Source - https://searchfox.org/wubkat/source/Source/WebCore/rendering/AutoTableLayout.cpp#157 ^ I am not going to add FIXME, because I am planning to look into fixing by merging other subsequent Blink patches as well after local testing. Just wanted to raise so I can fix it. It might progress - auto-layout-calc-width-001.html test case as well. Thanks!
Attachments
EWS
Comment 1 2023-03-14 03:29:16 PDT
Committed 261623@main (f013f2c88a3b): <https://commits.webkit.org/261623@main> Reviewed commits have been landed. Closing PR #11457 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-03-14 03:30:18 PDT
WebKit Commit Bot
Comment 3 2023-03-16 10:58:16 PDT
Re-opened since this is blocked by bug 254038
Ahmad Saleem
Comment 4 2023-10-10 12:01:04 PDT
I just ran full css-tables suite of WPT via --debug flag on top of 269151@main (debug build) and didn't get any debug crash or assert failure. I think post Alan's fix of bug 262918, it seems we can land this. Going to do PR now.
Ahmad Saleem
Comment 5 2023-10-10 12:12:59 PDT
EWS
Comment 6 2023-10-11 07:28:06 PDT
Committed 269200@main (a47442a35d9c): <https://commits.webkit.org/269200@main> Reviewed commits have been landed. Closing PR #18900 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.