Cherry-pick a47442a35d9c. rdar://106692191

Ignore calc() values on colgroup elements

    https://bugs.webkit.org/show_bug.cgi?id=253841
    rdar://problem/106692191

    Reviewed by Alan Baradlay.

    This patch aligns WebKit to Blink / Chromium and Gecko / Firefox.

    Merge - https://src.chromium.org/viewvc/blink?view=revision&revision=193912

    This patch add condition to ignore calc() values on 'colgroup' elements to align with
    web-spec.

    * Source/WebCore/rendering/AutoTableLayout.cpp:
    (AutoTableLayout::fullRecalc): Add 'isCalculated' condition
    * LayoutTests/fast/table/calculated-width-on-col-within-colgroup.html: Add Test Case
    * LayoutTests/fast/table/calculated-width-on-col-within-colgroup-expected.txt: Add Test Case Expectation

    Canonical link: https://commits.webkit.org/269200@main

Identifier: 267815.320@safari-7617-branch